# ZKVault

./: .gitignore  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  LEGACY.md  PROTOCOL.md
fixtures/private-post/v1/: README.md
fixtures/private-post/v1/reference-hello/: bundle.json  document.json
integrations/halo/: README.md
src/: main.cpp
src/app/: frontend_contract.cpp  frontend_contract.hpp  vault_app.cpp  vault_app.hpp  vault_codec.cpp  vault_codec.hpp  vault_session.cpp  vault_session.hpp
src/content/: private_post.cpp  private_post.hpp  private_post_file.cpp  private_post_file.hpp
src/crypto/: aead.cpp  aead.hpp  hex.cpp  hex.hpp  kdf.cpp  kdf.hpp  random.cpp  random.hpp  secure_memory.hpp
src/model/: encrypted_entry_file.hpp  master_key_file.hpp  password_entry.hpp
src/service/: vault_runtime.cpp  vault_runtime.hpp
src/shell/: interactive_shell.cpp  interactive_shell.hpp  shell_runtime.cpp  shell_runtime.hpp
src/storage/: json_storage.cpp  json_storage.hpp  master_key_storage.cpp  master_key_storage.hpp
src/terminal/: display.cpp  display.hpp  prompt.cpp  prompt.hpp
src/tools/: private_post_cli.cpp
src/tui/: terminal_ui.cpp  terminal_ui_flow.cpp  terminal_ui_flow.hpp  terminal_ui_input.cpp  terminal_ui_input.hpp  terminal_ui_render.cpp  terminal_ui_render.hpp  terminal_ui_state.hpp
tests/: app_contract_test.cpp  cli_error_paths_test.sh  cli_smoke_test.sh  frontend_contract_test.cpp  private_post_cli_smoke_test.sh  private_post_fixture_test.cpp  private_post_test.cpp  prompt_backspace_test.cpp  shell_smoke_test.sh  terminal_display_test.cpp  tui_smoke_test.cpp
